--- a/config/rocket_parameters.yaml
+++ b/config/rocket_parameters.yaml
@@ -12,33 +12,33 @@ diameters:
   - 0.156 
   - 0.156 
   - 0.135
-stage_z: 
+stage_z:
   - 0 
   - 0.242 
-  - 4.11 
-  - 4.16
-fin_n: 3
-fin_top_offset: 3.83 
-fin_span: 0.2
+  - 3.43 
+  - 3.51 
+fin_n: 4
+fin_top_offset: 3.15 
+fin_span: 0.17
 fin_root_chord: 0.28 # base length
 fin_tip_chord: 0.125
 fin_sweep: 0.107
 fin_thickness: 0.004
 lug_n: 2
 lug_S: 5.7e-4 
-dry_mass: 36.709
-dry_CM: 2.14
+dry_mass: 34.078 # Dry rocket mass + ABS leftover: 32.708+(2.2-0.830)
+dry_CM: 1.77
 dry_I:
-  - 52
-  - 52
+  - 39
+  - 39
   - 2
-propellant_mass: 3.693 
-propellant_CM: 3
-Isp: 213
+propellant_mass: 10.65 #4.65
+propellant_CM: 2.5
+Isp: 140.5
 maxThrust:
   - 100
   - 100
-  - 2000
+  - 3000
 minThrust: 
   - -100
   - -100
@@ -49,6 +49,6 @@ Cd:
   - 2
   - 2
   - 0.33
-throttling: False
+throttling: True
 input_delay: 34.0e-3 # Mean delay between external actions and its reception
 output_delay: 80.0e-3 # Mean delay between output command and its effect
