--- a/config/rocket_parameters.yaml
+++ b/config/rocket_parameters.yaml
@@ -19,7 +19,7 @@ stage_z:
   - 3.51 
 fin_n: 4
 fin_top_offset: 3.15 
-fin_span: 0.17
+fin_span: 0.05 #0.17
 fin_root_chord: 0.28 # base length
 fin_tip_chord: 0.125
 fin_sweep: 0.107
@@ -34,21 +34,21 @@ dry_I:
   - 2
 propellant_mass: 10.65 #4.65
 propellant_CM: 2.5
-Isp: 140.5
+Isp: 1.0e+4 #140.5
 maxThrust:
-  - 100
-  - 100
-  - 3000
+  - 50
+  - 50
+  - 500
 minThrust: 
-  - -100
-  - -100
+  - -50
+  - -50
   - 0
-minTorque: -50
-maxTorque: 50
+minTorque: -10
+maxTorque: 10
 Cd:
   - 2
   - 2
   - 0.33
 throttling: True
 input_delay: 34.0e-3 # Mean delay between external actions and its reception
-output_delay: 80.0e-3 # Mean delay between output command and its effect
+output_delay: 1.0e-3 # Mean delay between output command and its effect
