--- a/config/mpc_parameters.yaml
+++ b/config/mpc_parameters.yaml
@@ -7,23 +7,23 @@
 #
 # ----------------------------------------------------
 Q:
+  - 500     # position
+  - 500
+  - 0.0
+  - 1000.0 # speed
+  - 1000.0
+  - 0.0
+  - 0.0    # quaternion
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0      # angular rate
   - 0
   - 0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0
-  - 0
-  - 0
-  - 0.0
+  - 0.0    # mass
 theta: 1.0e+4
 R:
-  - 20
-  - 20
-  - 0
+  - 1
+  - 1
+  - 10
   - 0
