--- a/config/rocket_parameters.yaml
+++ b/config/rocket_parameters.yaml
@@ -19,7 +19,7 @@ stage_z:
   - 3.51 
 fin_n: 4
 fin_top_offset: 3.15 
-fin_span: 0.05 #0.17
+fin_span: 0.17 # 0.05
 fin_root_chord: 0.28 # base length
 fin_tip_chord: 0.125
 fin_sweep: 0.107
@@ -34,11 +34,11 @@ dry_I:
   - 2
 propellant_mass: 10.65 #4.65
 propellant_CM: 2.5
-Isp: 1.0e+4 #140.5
+Isp: 1.0e+5 #140.5
 maxThrust:
   - 50
   - 50
-  - 500
+  - 2500
 minThrust: 
   - -50
   - -50
@@ -49,6 +49,6 @@ Cd:
   - 2
   - 2
   - 0.33
-throttling: True
+throttling: False
 input_delay: 34.0e-3 # Mean delay between external actions and its reception
 output_delay: 1.0e-3 # Mean delay between output command and its effect
